# libserial

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CPPLINT.cfg  README.md  libserial.pc.in  makefile  uncrustify.cfg
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  coverage.yml  lint.yml  unit-tests.yml
debian/: postinst  postrm
doc/: Doxyfile
docs/: Doxyfile  api_reference.rst  conf.py  examples.rst  index.rst  installation.rst  requirements.txt  usage.rst
examples/: README.md  basic_communication.cpp  baud_rate_testing.cpp  list_ports.cpp  run_basic_example.sh
include/libserial/: device.hpp  ports.hpp  serial.hpp  serial_exception.hpp  serial_types.hpp
src/: device.cpp  ports.cpp  serial.cpp  serial_formatted.cpp
test/: test_device.cpp  test_ports.cpp  test_serial_pty.cpp  test_serial_simple.cpp
tools/: run_cppcheck.sh  run_cpplint.sh  run_uncrustify.sh  run_uncrustify_check.sh
